Added responsive styling to about page toolkit

--- a/about.html
+++ b/about.html
@@ -34,32 +34,30 @@
         <div class="about-me">
           <a href="/index.html" class="temp-link">Home</a>
           <div class="about-me-inner d-flex">
-              <img
-                src="/images/trapeze-image.png"
-                alt="LJ Fryer hanging from trapeze"
-                class="img-fluid about-me-image"
-              />
-              <div class="about-me-text d-flex flex-column">
-                <div>
-                  <h1>ABOUT ME</h1>
-                </div>
-                <div class="about-me-paragraph">
-                  <p>
-                    !Dummy text - An experienced teacher with a lifelong passion
-                    for STEM, I decided to apply my attention to detail and
-                    problem solving skills to becoming a Front End Developer.
-                    Starting my journey with SheCodes ignited my passion for
-                    coding. Each SheCodes workshop culminates in a final project
-                    that showcases the skills, languages, tools and frameworks
-                    that bring me one step closer to creating aesthetically
-                    pleasing user interfaces that are intuitive and responsive.
-                  </p>
-                </div>
+            <img
+              src="/images/trapeze-image.png"
+              alt="LJ Fryer hanging from trapeze"
+              class="img-fluid about-me-image"
+            />
+            <div class="about-me-text d-flex flex-column">
+              <div>
+                <h1>ABOUT ME</h1>
+              </div>
+              <div class="about-me-paragraph">
+                <p>
+                  !Dummy text - An experienced teacher with a lifelong passion
+                  for STEM, I decided to apply my attention to detail and
+                  problem solving skills to becoming a Front End Developer.
+                  Starting my journey with SheCodes ignited my passion for
+                  coding. Each SheCodes workshop culminates in a final project
+                  that showcases the skills, languages, tools and frameworks
+                  that bring me one step closer to creating aesthetically
+                  pleasing user interfaces that are intuitive and responsive.
+                </p>
               </div>
             </div>
           </div>
         </div>
-
         <div class="personal-links mb-5 d-flex justify-content-center">
           <a href="#" title="My Projects">
             <i class="fa-regular fa-file"></i
@@ -68,153 +66,172 @@
             ><i class="fa-regular fa-envelope"></i
           ></a>
         </div>
-          <div class="text-center mb-3">
-            <i class="fa-solid fa-chevron-down down-icon"></i>
-          </div>
-          <br />
-          <br />
-          <h2 class="toolkit-title text-center mb-5">
-            My Toolkit <i class="fa-solid fa-laptop"></i>
-          </h2>
-        <div>
-          
-
-          <div class="skills-container">
-            <div class="toolkit d-flex mb-5">
-              <ul class="skills">
-                <li class="mb-3 text-center">
-                  <img
-                    src="/logos/html-icon.png"
-                    alt="HTML 5"
-                    class="img-fluid"
-                  />
-                </li>
-                <li class="skills-text text-center">HTML</li>
-              </ul>
-
-              <ul class="skills">
-                <li class="mb-3 text-center">
-                  <img src="/logos/css-icon.png" alt="CSS" class="img-fluid" />
-                </li>
-                <li class="skills-text text-center">CSS</li>
-              </ul>
-
-              <ul class="skills">
-                <li class="mb-3 text-center">
-                  <img
-                    src="/logos/javascript-icon.png"
-                    alt="JavaScript"
-                    class="img-fluid"
-                  />
-                </li>
-                <li class="skills-text text-center">JavaScript</li>
-              </ul>
-
-              <ul class="skills">
-                <li class="mb-3 text-center">
-                  <img
-                    src="/logos/bootstrap-icon.png"
-                    alt="BootStrap Framework"
-                    class="img-fluid"
-                  />
-                </li>
-                <li class="skills-text text-center">Bootstrap</li>
-              </ul>
-
-              <ul class="skills">
-                <li class="mb-3 text-center">
-                  <img
-                    src="/logos/api-icon.png"
-                    alt="API Application Programming Interface"
-                    class="img-fluid"
-                  />
-                </li>
-                <li class="skills-text text-center">API</li>
-              </ul>
-
-              <ul class="skills">
-                <li class="mb-3 text-center">
-                  <img
-                    src="/logos/seo-icon.png"
-                    alt="SEO Search Engine Optimisation"
-                    class="img-fluid"
-                  />
-                </li>
-                <li class="skills-text text-center">SEO</li>
-              </ul>
-            </div>
-            <div class="toolkit d-flex">
-              <ul class="skills">
-                <li class="mb-3 text-center">
-                  <img
-                    src="/logos/vs-code-editor-icon.png"
-                    alt="VS Code Editor"
-                    class="img-fluid"
-                  />
-                </li>
-                <li class="skills-text text-center">VS Code</li>
-              </ul>
-
-              <ul class="skills">
-                <li class="mb-3 text-center">
-                  <img
-                    src="/logos/git-icon.png"
-                    alt="Git Repositories"
-                    class="img-fluid"
-                  />
-                </li>
-                <li class="skills-text text-center">Git</li>
-              </ul>
-
-              <ul class="skills">
-                <li class="mb-3 text-center">
-                  <img
-                    src="/logos/github-icon.svg"
-                    alt="GitHub"
-                    class="img-fluid"
-                  />
-                </li>
-                <li class="skills-text text-center">GitHub</li>
-              </ul>
-
-              <ul class="skills">
-                <li class="mb-3 text-center">
-                  <img
-                    src="/logos/hosting-icon.png"
-                    alt="Hosting"
-                    class="img-fluid"
-                  />
-                </li>
-                <li class="skills-text text-center">Hosting</li>
-              </ul>
-
-              <ul class="skills">
-                <li class="mb-3 text-center">
-                  <img
-                    src="/logos/ai-icon.png"
-                    alt="AI Prompt Engineering"
-                    class="img-fluid"
-                  />
-                </li>
-                <li class="skills-text text-center">AI</li>
-              </ul>
-
-              <ul class="skills">
-                <li class="mb-3 text-center">
-                  <img
-                    src="/logos/responsive-icon.png"
-                    alt="Responsive Interfaces"
-                    class="img-fluid"
-                  />
-                </li>
-                <li class="skills-text text-center">Responsive</li>
-              </ul>
-            </div>
-            
-          </div>
+        <div class="text-center mb-3">
+          <i class="fa-solid fa-chevron-down down-icon"></i>
         </div>
         <br />
         <br />
+        <h2 class="toolkit-title text-center mb-5">
+          My Toolkit <i class="fa-solid fa-laptop"></i>
+        </h2>
+
+        <div class="skills-container">
+          <div class="toolkit mb-3">
+            <div class="row">
+              <div class="col-2">
+                <ul class="skills">
+                  <li class="mb-2">
+                    <img
+                      src="/logos/html-icon.png"
+                      alt="HTML 5"
+                      class="img-fluid"
+                    />
+                  </li>
+                  <li class="skills-text d-none d-md-block">HTML</li>
+                </ul>
+              </div>
+              <div class="col-2">
+                <ul class="skills">
+                  <li class="mb-2">
+                    <img
+                      src="/logos/css-icon.png"
+                      alt="CSS"
+                      class="img-fluid"
+                    />
+                  </li>
+                  <li class="skills-text d-none d-md-block">CSS</li>
+                </ul>
+              </div>
+              <div class="col-2">
+                <ul class="skills">
+                  <li class="mb-2">
+                    <img
+                      src="/logos/javascript-icon.png"
+                      alt="JavaScript"
+                      class="img-fluid"
+                    />
+                  </li>
+                  <li class="skills-text d-none d-md-block">JavaScript</li>
+                </ul>
+              </div>
+              <div class="col-2">
+                <ul class="skills">
+                  <li class="mb-2">
+                    <img
+                      src="/logos/bootstrap-icon.png"
+                      alt="BootStrap Framework"
+                      class="img-fluid"
+                    />
+                  </li>
+                  <li class="skills-text d-none d-md-block">Bootstrap</li>
+                </ul>
+              </div>
+              <div class="col-2">
+                <ul class="skills">
+                  <li class="mb-2">
+                    <img
+                      src="/logos/api-icon.png"
+                      alt="API Application Programming Interface"
+                      class="img-fluid"
+                    />
+                  </li>
+                  <li class="skills-text d-none d-md-block">API</li>
+                </ul>
+              </div>
+              <div class="col-2">
+                <ul class="skills">
+                  <li class="mb-2">
+                    <img
+                      src="/logos/seo-icon.png"
+                      alt="SEO Search Engine Optimisation"
+                      class="img-fluid"
+                    />
+                  </li>
+                  <li class="skills-text d-none d-md-block">SEO</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="toolkit">
+            <div class="row">
+              <div class="col-2">
+                <ul class="skills">
+                  <li class="mb-2">
+                    <img
+                      src="/logos/vs-code-editor-icon.png"
+                      alt="VS Code Editor"
+                      class="img-fluid"
+                    />
+                  </li>
+                  <li class="skills-text d-none d-md-block">VS Code</li>
+                </ul>
+              </div>
+              <div class="col-2">
+                <ul class="skills">
+                  <li class="mb-2">
+                    <img
+                      src="/logos/git-icon.png"
+                      alt="Git Repositories"
+                      class="img-fluid"
+                    />
+                  </li>
+                  <li class="skills-text d-none d-md-block">Git</li>
+                </ul>
+              </div>
+              <div class="col-2">
+                <ul class="skills">
+                  <li class="mb-2">
+                    <img
+                      src="/logos/github-icon.svg"
+                      alt="GitHub"
+                      class="img-fluid"
+                    />
+                  </li>
+                  <li class="skills-text d-none d-md-block">GitHub</li>
+                </ul>
+              </div>
+              <div class="col-2">
+                <ul class="skills">
+                  <li class="mb-2">
+                    <img
+                      src="/logos/hosting-icon.png"
+                      alt="Hosting"
+                      class="img-fluid"
+                    />
+                  </li>
+                  <li class="skills-text d-none d-md-block">Hosting</li>
+                </ul>
+              </div>
+              <div class="col-2">
+                <ul class="skills">
+                  <li class="mb-2">
+                    <img
+                      src="/logos/ai-icon.png"
+                      alt="AI Prompt Engineering"
+                      class="img-fluid"
+                    />
+                  </li>
+                  <li class="skills-text d-none d-md-block">AI</li>
+                </ul>
+              </div>
+              <div class="col-2">
+                <ul class="skills">
+                  <li class="mb-2">
+                    <img
+                      src="/logos/responsive-icon.png"
+                      alt="Responsive Interfaces"
+                      class="img-fluid"
+                    />
+                  </li>
+                  <li class="skills-text d-none d-md-block">Responsive</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <br />
+          <br />
+        </div>
       </div>
     </main>
   </body>
