Adjusted styling on hero & about me text. Added responsiveness to skills container, hero & about me inner.

--- a/about.html
+++ b/about.html
@@ -39,7 +39,9 @@
               alt="LJ Fryer hanging from trapeze"
               class="img-fluid about-me-image"
             />
-            <div class="about-me-text d-flex flex-column">
+            <div
+              class="about-me-text d-flex flex-column justify-content-center"
+            >
               <div>
                 <h1>ABOUT ME</h1>
               </div>
@@ -76,9 +78,9 @@
         </h2>
 
         <div class="skills-container">
-          <div class="toolkit mb-3">
+          <div class="toolkit">
             <div class="row">
-              <div class="col-2">
+              <div class="col-4 col-md-2">
                 <ul class="skills">
                   <li class="mb-2">
                     <img
@@ -90,7 +92,7 @@
                   <li class="skills-text d-none d-md-block">HTML</li>
                 </ul>
               </div>
-              <div class="col-2">
+              <div class="col-4 col-md-2">
                 <ul class="skills">
                   <li class="mb-2">
                     <img
@@ -102,7 +104,7 @@
                   <li class="skills-text d-none d-md-block">CSS</li>
                 </ul>
               </div>
-              <div class="col-2">
+              <div class="col-4 col-md-2">
                 <ul class="skills">
                   <li class="mb-2">
                     <img
@@ -114,7 +116,7 @@
                   <li class="skills-text d-none d-md-block">JavaScript</li>
                 </ul>
               </div>
-              <div class="col-2">
+              <div class="col-4 col-md-2">
                 <ul class="skills">
                   <li class="mb-2">
                     <img
@@ -126,7 +128,7 @@
                   <li class="skills-text d-none d-md-block">Bootstrap</li>
                 </ul>
               </div>
-              <div class="col-2">
+              <div class="col-4 col-md-2">
                 <ul class="skills">
                   <li class="mb-2">
                     <img
@@ -138,7 +140,7 @@
                   <li class="skills-text d-none d-md-block">API</li>
                 </ul>
               </div>
-              <div class="col-2">
+              <div class="col-4 col-md-2">
                 <ul class="skills">
                   <li class="mb-2">
                     <img
@@ -155,7 +157,7 @@
 
           <div class="toolkit">
             <div class="row">
-              <div class="col-2">
+              <div class="col-4 col-md-2">
                 <ul class="skills">
                   <li class="mb-2">
                     <img
@@ -167,7 +169,7 @@
                   <li class="skills-text d-none d-md-block">VS Code</li>
                 </ul>
               </div>
-              <div class="col-2">
+              <div class="col-4 col-md-2">
                 <ul class="skills">
                   <li class="mb-2">
                     <img
@@ -179,7 +181,7 @@
                   <li class="skills-text d-none d-md-block">Git</li>
                 </ul>
               </div>
-              <div class="col-2">
+              <div class="col-4 col-md-2">
                 <ul class="skills">
                   <li class="mb-2">
                     <img
@@ -191,7 +193,7 @@
                   <li class="skills-text d-none d-md-block">GitHub</li>
                 </ul>
               </div>
-              <div class="col-2">
+              <div class="col-4 col-md-2">
                 <ul class="skills">
                   <li class="mb-2">
                     <img
@@ -203,7 +205,7 @@
                   <li class="skills-text d-none d-md-block">Hosting</li>
                 </ul>
               </div>
-              <div class="col-2">
+              <div class="col-4 col-md-2">
                 <ul class="skills">
                   <li class="mb-2">
                     <img
@@ -215,7 +217,7 @@
                   <li class="skills-text d-none d-md-block">AI</li>
                 </ul>
               </div>
-              <div class="col-2">
+              <div class="col-4 col-md-2">
                 <ul class="skills">
                   <li class="mb-2">
                     <img
