--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="hero">
         <a href="/about.html" class="temp-link">About Me</a>
         <div class="hero-inner d-flex">
-          <div class="hero-text d-flex flex-column">
+          <div class="hero-text d-flex flex-column justify-content-center">
             <div><h1 class="name-title">LJ FRYER</h1></div>
             <div class="hero-paragraph">
               <p>
