--- a/about.html
+++ b/about.html
@@ -60,22 +60,24 @@
             </div>
           </div>
         </div>
-        <div class="personal-links mb-5 d-flex justify-content-center">
-          <a href="#" title="My Projects">
-            <i class="fa-regular fa-file"></i
-          ></a>
-          <a href="mailto:lj.fryer.001@gmail.com" title="Email me"
-            ><i class="fa-regular fa-envelope"></i
-          ></a>
+        <div class="winky-face">
+          <div class="personal-links mb-5 d-flex justify-content-center">
+            <a href="#" title="My Projects">
+              <i class="fa-regular fa-file"></i
+            ></a>
+            <a href="mailto:lj.fryer.001@gmail.com" title="Email me"
+              ><i class="fa-regular fa-envelope"></i
+            ></a>
+          </div>
+          <div class="text-center mb-3">
+            <i class="fa-solid fa-chevron-down down-icon"></i>
+          </div>
+          <br />
+          <br />
+          <h2 class="toolkit-title text-center mb-5">
+            My Toolkit <i class="fa-solid fa-laptop"></i>
+          </h2>
         </div>
-        <div class="text-center mb-3">
-          <i class="fa-solid fa-chevron-down down-icon"></i>
-        </div>
-        <br />
-        <br />
-        <h2 class="toolkit-title text-center mb-5">
-          My Toolkit <i class="fa-solid fa-laptop"></i>
-        </h2>
 
         <div class="skills-container">
           <div class="toolkit">
