Tidied up styling. Improved padding and responsiveness

--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
                       class="img-fluid"
                     />
                   </li>
-                  <li class="skills-text d-none d-md-block">HTML</li>
+                  <li class="skills-text">HTML</li>
                 </ul>
               </div>
               <div class="col-4 col-md-2">
@@ -103,7 +103,7 @@
                       class="img-fluid"
                     />
                   </li>
-                  <li class="skills-text d-none d-md-block">CSS</li>
+                  <li class="skills-text">CSS</li>
                 </ul>
               </div>
               <div class="col-4 col-md-2">
@@ -115,7 +115,7 @@
                       class="img-fluid"
                     />
                   </li>
-                  <li class="skills-text d-none d-md-block">JavaScript</li>
+                  <li class="skills-text">JavaScript</li>
                 </ul>
               </div>
               <div class="col-4 col-md-2">
@@ -127,7 +127,7 @@
                       class="img-fluid"
                     />
                   </li>
-                  <li class="skills-text d-none d-md-block">Bootstrap</li>
+                  <li class="skills-text">Bootstrap</li>
                 </ul>
               </div>
               <div class="col-4 col-md-2">
@@ -139,7 +139,7 @@
                       class="img-fluid"
                     />
                   </li>
-                  <li class="skills-text d-none d-md-block">API</li>
+                  <li class="skills-text">API</li>
                 </ul>
               </div>
               <div class="col-4 col-md-2">
@@ -151,7 +151,7 @@
                       class="img-fluid"
                     />
                   </li>
-                  <li class="skills-text d-none d-md-block">SEO</li>
+                  <li class="skills-text">SEO</li>
                 </ul>
               </div>
             </div>
@@ -168,7 +168,7 @@
                       class="img-fluid"
                     />
                   </li>
-                  <li class="skills-text d-none d-md-block">VS Code</li>
+                  <li class="skills-text">VS Code</li>
                 </ul>
               </div>
               <div class="col-4 col-md-2">
@@ -180,7 +180,7 @@
                       class="img-fluid"
                     />
                   </li>
-                  <li class="skills-text d-none d-md-block">Git</li>
+                  <li class="skills-text">Git</li>
                 </ul>
               </div>
               <div class="col-4 col-md-2">
@@ -192,7 +192,7 @@
                       class="img-fluid"
                     />
                   </li>
-                  <li class="skills-text d-none d-md-block">GitHub</li>
+                  <li class="skills-text">GitHub</li>
                 </ul>
               </div>
               <div class="col-4 col-md-2">
@@ -204,7 +204,7 @@
                       class="img-fluid"
                     />
                   </li>
-                  <li class="skills-text d-none d-md-block">Hosting</li>
+                  <li class="skills-text">Hosting</li>
                 </ul>
               </div>
               <div class="col-4 col-md-2">
@@ -216,7 +216,7 @@
                       class="img-fluid"
                     />
                   </li>
-                  <li class="skills-text d-none d-md-block">AI</li>
+                  <li class="skills-text">AI</li>
                 </ul>
               </div>
               <div class="col-4 col-md-2">
@@ -228,13 +228,11 @@
                       class="img-fluid"
                     />
                   </li>
-                  <li class="skills-text d-none d-md-block">Responsive</li>
+                  <li class="skills-text">Responsive</li>
                 </ul>
               </div>
             </div>
           </div>
-          <br />
-          <br />
         </div>
       </div>
     </main>
