Created work page, added new project slides. Updated images

--- a/about.html
+++ b/about.html
@@ -32,7 +32,8 @@
     <main class="mb-5">
       <div class="container">
         <div class="about-me">
-          <a href="/index.html" class="temp-link">Home</a>
+          <a href="/" class="temp-link">Home</a>
+          <a href="/work.html" class="temp-link">My Work</a>
           <div class="about-me-inner d-flex">
             <img
               src="/images/trapeze-image.png"
