--- a/work.html
+++ b/work.html
@@ -30,35 +30,12 @@
   </head>
   <body class="mb-5">
     <div class="container">
-      <div class="hero">
-        <a href="/about.html" class="temp-link">About Me</a>
-        <a href="/work.html" class="temp-link">My Work</a>
-        <div class="hero-inner d-flex">
-          <div class="hero-text d-flex flex-column justify-content-center">
-            <div><h1 class="name-title">LJ FRYER</h1></div>
-            <div class="hero-paragraph">
-              <p>
-                An experienced teacher with a lifelong passion for STEM, I
-                decided to apply my attention to detail and problem solving
-                skills to becoming a Front End Developer. Starting my journey
-                with SheCodes ignited my passion for coding. Each SheCodes
-                workshop culminates in a final project that showcases the
-                skills, languages, tools and frameworks that bring me one step
-                closer to creating aesthetically pleasing user interfaces that
-                are intuitive and responsive.
-              </p>
-            </div>
-          </div>
-          <img
-            src="/images/profile-picture-sqr.png"
-            alt="LJ Fryer"
-            class="img-fluid hero-image"
-          />
-        </div>
-      </div>
-      <h3 class="text-center p-2 mt-3 mb-3">A sample of my projects</h3>
-      <div class="homepage">
-        <div class="row">
+      <a href="/" class="temp-link">Home</a>
+      <a href="/about.html" class="temp-link">About Me</a>
+      <h1 class="text-center">My Work</h1>
+      <h3 class="text-center p-2 mt-3 mb-3">Check out my projects</h3>
+      <div class="my-work">
+        <div class="row mb-4">
           <div class="col-lg-4">
             <div class="project-slides">
               <img
@@ -128,7 +105,7 @@
           <div class="col-lg-4">
             <div class="project-slides">
               <img
-                src="/images/pole-page-img.png"
+                src="/images/pole-page-dark-image.png"
                 class="project-image img-fluid"
                 alt="Pole dance project"
               />
@@ -150,6 +127,104 @@
                     target="_blank"
                     class="project-link"
                     >passion project</a
+                  ><br />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="project-slides">
+              <img
+                src="/images/world-clock-image.png"
+                class="project-image img-fluid"
+                alt="LJ Fryer World Clock App"
+              />
+              <div class="project-description">
+                <div>
+                  <h2>World Clock</h2>
+                  <p class="mb-5">
+                    !Dummy text. My first interactive application, I added
+                    GitHub, hosting and API integration to my developer toolbox.
+                    This app employs ES6, integrating a search engine, functions
+                    to extract data from the API and string interpolation to
+                    deliver a live, five day weather forecast.
+                    <br />
+                    <br />
+                    Click to check the weather in your area.
+                  </p>
+                </div>
+                <div>
+                  <a
+                    href="https://weather-app-ljf.netlify.app/"
+                    target="_blank"
+                    class="project-link"
+                    >World Clock</a
+                  >
+                  <br />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="project-slides">
+              <img
+                src="/images/dummy-slide.png"
+                class="project-image img-fluid"
+                alt="LJ Fryer Weather App"
+              />
+              <div class="project-description">
+                <div>
+                  <h2>AI Joke Generator</h2>
+                  <p class="mb-5">
+                    !Dummy text. This project gave me an introduction to AI
+                    prompt engineering. The mission was to build an interactive
+                    text generator using Axios and the SheCodes AI API.
+                    Including animations utilising JS plugin and CSS @keyframes
+                    rule, this app was a fun build.
+                    <br />
+                    <br />
+                    Click to try it out.
+                  </p>
+                </div>
+                <div>
+                  <a
+                    href="https://www.shecodes.io/cohorts/2203/projects/2466767?_gl=1*1hq72fe*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
+                    target="_blank"
+                    class="project-link"
+                    >AI Joke for you</a
+                  >
+                  <br />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="project-slides">
+              <img
+                src="/images/lucky-project-image.png"
+                class="project-image img-fluid"
+                alt="Pole dance project"
+              />
+              <div class="project-description">
+                <h2>Lucky Dog Project</h2>
+                <p class="mb-5">
+                  !Dummy text. Using developer tool VS Code, I built a HTML
+                  landing page featuring CSS grids, transform properties and a
+                  linear gradient. JavaScript class manipulation allowed me to
+                  create a light/dark theme option on the page. Click image for
+                  dark theme.
+                  <br />
+                  <br />
+                  Click to view the page.
+                </p>
+                <div>
+                  <a
+                    href="https://www.shecodes.io/cohorts/1936/projects/2443518?_gl=1*hmg0f*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
+                    target="_blank"
+                    class="project-link"
+                    >Lucky boi</a
                   ><br />
                 </div>
               </div>
